@@ -407,3 +407,15 @@ GameEngine::overlayHandler(const CEGUI::EventArgs& args)
     
     return true;
 }
+
+void
+GameEngine::windowResized(Ogre::RenderWindow* rw)
+{
+  unsigned int width, height, depth;
+  int left, top;
+  rw->getMetrics(width, height, depth, left, top);
+ 
+  const OIS::MouseState &ms = mMouse->getMouseState();
+  ms.width = width;
+  ms.height = height;
+}
