@@ -66,6 +66,7 @@ protected:
   // Ogre::FrameListener
   virtual bool frameRenderingQueued(const Ogre::FrameEvent&);
   virtual void windowClosed(Ogre::RenderWindow*);
+  virtual void windowResized(Ogre::RenderWindow* rw);
   // OIS::MouseListener
   bool mouseMoved( const OIS::MouseEvent&);
   bool mousePressed( const OIS::MouseEvent&, OIS::MouseButtonID);
